--- a/src/app/content/shop/shop.component.html
+++ b/src/app/content/shop/shop.component.html
@@ -19,7 +19,7 @@
                                        *ngFor="let subc of subcategories"
                                        routerLinkActive="active-link"
                                        [routerLink]="['/category', parentCategory, category, subc]"
-                                       (click)="selectedCategory = subc">{{subc}}</a>
+                                    >{{subc}}</a>
                                 </li>
                             </ul>
                         </li>
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="sidebar-right">
-        <router-outlet></router-outlet>
+            <router-outlet></router-outlet>
         </div>
     </div>
 </section>
