--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -97,17 +97,7 @@
                         <div class="consultation_req-fields"><sup>*</sup> обязательные поля</div>
                     </form>
                     <div class="consultation_close-btn" (click)="modalSwitcher()">&times;</div>
-                </div><!-- /subscribe_window -->
-                <!--<div class="consultation_popWindow thank_you_window">-->
-                <!--&lt;!&ndash; //благодарственное окно после успешной отправки формы &ndash;&gt;-->
-                <!--<p class="thank_you_title">Thank you for subscribing!</p>-->
-                <!--<p class="thank_you_body">We've sent some useful tips to your email. Go ahead and check them-->
-                <!--now!</p>-->
-                <!--<div class="consultation_close-btn">&times;</div>-->
-                <!--</div>&lt;!&ndash; /thank_you_window &ndash;&gt;-->
-
-                <!-- /popup-overlay -->
-
+                </div>
             </div>
         </div>
     </div>
