--- a/src/app/content/visual/visual.component.html
+++ b/src/app/content/visual/visual.component.html
@@ -1,6 +1,6 @@
 <div class="sidebar-right">
     <div class="back-link_wrapper">
-        <a href="#" class="previous-round" onclick="history.back(); return false;">&#8249;</a>
+        <i class="fa fa-chevron-circle-left fa-3x back-link_fa" onclick="history.back(); return false;"></i>
         <a class="back-link" onclick="history.back(); return false;">
             назад
         </a>
