--- a/backend/angular/assets/css/style.css
+++ b/backend/angular/assets/css/style.css
@@ -290,7 +290,7 @@ body a {
     -webkit-justify-content: space-around;
     -ms-flex-pack: distribute;
     justify-content: space-around;
-    min-height: 35vh
+    min-height: 40vh
 }
 
 #nav-menu .nav_menu_wrap .nav_menu_left a {
@@ -2351,9 +2351,13 @@ header {
         margin-right: 0;
         margin-left: 0;
         position: relative;
-        height: 420px;
+        height: 430px;
+        max-height: 80vh;
         padding: 16px;
         box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.08), 0 0 4px rgba(0, 0, 0, 0.048);
+    }
+    .catalog-item__img {
+        max-height: 65vh;
     }
 
 
@@ -3542,6 +3546,9 @@ agm-map {
 .sidebar-left-wrapper {
     max-width: 21vw;
 }
+.mobile_menu{
+    display: none !important;
+}
 
 #nav-menu .nav_menu_wrap .menu_right_text {
     text-align: center;
@@ -3554,6 +3561,12 @@ agm-map {
 }
 
 @media only screen and (max-device-width: 768px) {
+    .fullDesktop_menu{
+        display: none!important;
+    }
+    .mobile_menu{
+        display: flex!important;
+    }
     #navMenuLeft {
         height: calc(100vh - 170px);
     }
@@ -3785,5 +3798,9 @@ input[name="tel"] {
     display: none;
 }
 .mainMenu_elem .subMenu_elem  a {
+    transition: all 3s 1s;
     display: block;
+}
+.fullDesktop_menu{
+
 }
