--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,32 +22,83 @@
                     <span></span>
                 </div>
                 <div id="nav-menu" [class.open]="menuStatus">
-                    <div class="nav_menu_wrap">
+                    <div class="nav_menu_wrap fullDesktop_menu">
                         <div id="navMenuLeft" class="nav_menu_left">
-                            <a [routerLink]="linkEnabled ? ['category', 'shop'] : null" class="shop"
+                            <a class="shop"
                                (click)="menuBigScreen('shop')">магазин</a>
-                            <a [routerLink]="linkEnabled ? ['category', 'wedding'] : null" class="weddingLinkMobile"
+                            <a class="weddingLinkMobile"
                                (click)="menuBigScreen('wedding')">свадебное оформление
                             </a>
-                            <a [routerLink]="['category', 'oformlenie']" class="visualLinkMobile"
+                            <a class="visualLinkMobile"
                                (click)="menuToggle()">оформление
                             </a>
-                            <a [routerLink]="linkEnabled ? ['about-us'] : null" class="about"
+                            <a class="about"
                                (click)="menuBigScreen('about-us')">о нас
                             </a>
-                            <a [routerLink]="linkEnabled ? ['cooperation'] : null" class="cooperation"
+                            <a class="cooperation"
                                (click)="menuBigScreen('cooperation')">сотрудничество
                             </a>
-                            <a [routerLink]="linkEnabled ? ['delivery'] : null" class="delivery"
+                            <a class="delivery"
                                (click)="menuBigScreen('delivery')">доставка и оплата
                             </a>
 
                         </div>
                         <div class="nav_menu_right" [ngSwitch]="menuCategory">
-                                <div *ngSwitchDefault id="shop" class="menu_right_text open">
+                                <div *ngSwitchDefault class="menu_right_text open">
                                     <a *ngFor="let category of getCategory('shop')" class="navLink" [routerLink]="['category', 'shop', category]"
                                        (click)="menuToggle()">{{category}}</a>
                                 </div>
+                            <div *ngSwitchCase="'wedding'" class="menu_right_text open">
+                                <a *ngFor="let category of getCategory('wedding')" class="navLink" [routerLink]="['category', 'wedding', category]"
+                                   (click)="menuToggle()">{{category}}</a>
+                            </div>
+                            <div *ngSwitchCase="'about-us'" class="menu_right_text open">
+                                <h3>Цветочный</h3>
+                                <span>Прекрасный магазин в удобном месте. Всегда свежие цветы, оригинальные букеты.</span>
+                                <span>Огромный выбор декора, свечей и комнатных растеней.</span>
+                            </div>
+                            <div *ngSwitchCase="'cooperation'" class="menu_right_text open">
+                                <h3>Предложения сотрудничества </h3>
+                                <span>096-609-12-55 </span>
+                                <span>lazutikovnikita@gmail.com</span>
+                                <h3>Корпоративные и оптовые заказы </h3>
+                                <span>096-609-12-55</span>
+                                <span>corporative@gmail.com</span>
+                            </div>
+                            <div *ngSwitchCase="'delivery'" class="menu_right_text open">
+                                <h3>Доставка курьреом</h3>
+                                <span>Харькову - 50 гривен</span>
+                                <span>за город - 50 гривен</span>
+                                <span>Бесплатная доставка <strong>от 1 000 гривен</strong></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="nav_menu_wrap mobile_menu">
+                        <div class="nav_menu_left">
+                            <a [routerLink]="['category', 'shop']" class="shop"
+                               (click)="menuBigScreen('shop')">магазин</a>
+                            <a [routerLink]="['category', 'wedding']" class="weddingLinkMobile"
+                               (click)="menuBigScreen('wedding')">свадебное оформление
+                            </a>
+                            <a [routerLink]="['category', 'oformlenie']" class="visualLinkMobile"
+                               (click)="menuToggle()">оформление
+                            </a>
+                            <a [routerLink]="['about-us']" class="about"
+                               (click)="menuBigScreen('about-us')">о нас
+                            </a>
+                            <a [routerLink]="['cooperation']" class="cooperation"
+                               (click)="menuBigScreen('cooperation')">сотрудничество
+                            </a>
+                            <a [routerLink]="['delivery']" class="delivery"
+                               (click)="menuBigScreen('delivery')">доставка и оплата
+                            </a>
+
+                        </div>
+                        <div class="nav_menu_right" [ngSwitch]="menuCategory">
+                            <div *ngSwitchDefault id="shop" class="menu_right_text open">
+                                <a *ngFor="let category of getCategory('shop')" class="navLink" [routerLink]="['category', 'shop', category]"
+                                   (click)="menuToggle()">{{category}}</a>
+                            </div>
                             <div *ngSwitchCase="'wedding'" id="wedding" class="menu_right_text open">
                                 <a *ngFor="let category of getCategory('wedding')" class="navLink" [routerLink]="['category', 'wedding', category]"
                                    (click)="menuToggle()">{{category}}</a>
