--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,5 @@
-<section class="main_page_section">
+<section class="main_page_section" >
+<!--  <img src="../assets/images/main/main.jpg" alt="">-->
   <div id="video">
     <!--<video id="videoHero" autoplay muted loop
     poster="public/images/svadba1.jpg">-->
