--- a/src/app/content/shop/right-cards/right-cards.component.html
+++ b/src/app/content/shop/right-cards/right-cards.component.html
@@ -11,20 +11,20 @@
 </div>
 <div class="catalog-wrapper">
     <div class="catalog-item"
-         [routerLink]="['/category', parentCategory, 'id',  product._id]"
-         *ngFor=" let product of getProducts() | orderBy:orderSelector">
-        <!--<a class="catalog-item__img">-->
-        <!--<img [appImgLink]="product.img" [appImageCategory]="parentCategory" [alt]="product.name">-->
-        <!--</a>-->
-        <a class="catalog-item__img">
+         *ngFor=" let product of getProducts() | orderBy:orderSelector"
+    >
+        <a class="catalog-item__img"
+           [routerLink]="['/category', parentCategory, 'id',  product._id]"
+        >
             <img [src]="product.img" [alt]="product.name">
         </a>
+        <span *ngIf="!!product.newProd" class="newProd"> Новинка </span>
         <div class="catalog-item__name">{{product.name}}</div>
         <div class="catalog-item__wrapper-price">
             <div class="catalog-item__prices">{{product.price}} грн
             </div>
-            <div class="catalog-item__btn"><a
-                    [routerLink]="['/category', parentCategory, 'id',  product._id]">Далее...</a></div>
+            <div class="catalog-item__btn"><a (click)="addProductToCart(product)"
+            >В корзину</a></div>
         </div>
     </div>
 </div>
