--- a/src/app/content/visual/visual.component.html
+++ b/src/app/content/visual/visual.component.html
@@ -77,7 +77,7 @@
                                 <button [disabled]="form.invalid && loading"
                                         type="submit"
                                         class="consultation_btn">
-                                    <i class="fa fa-check" aria-hidden="true"></i> {{buttonText}}
+                                    <i *ngIf="messageSent" class="fa fa-check" aria-hidden="true" style="color: #89e100"></i> {{buttonText}}
                                 </button>
                             </div>
                         </form>
