--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -83,13 +83,12 @@
                       maxlength="200"
                       placeholder="Текст сообщения"
               ></textarea>
-
                         </div>
                         <div class="consultation_aligncenter">
                             <button [disabled]="form.invalid && loading"
                                     type="submit"
                                     class="consultation_btn">
-                                <i class="fa fa-check" aria-hidden="true"></i> {{buttonText}}
+                                <i *ngIf="messageSent" class="fa fa-check" aria-hidden="true" style="color: #89e100"></i> {{buttonText}}
                             </button>
                         </div>
                         <div class="consultation_req-fields"><sup>*</sup> обязательные поля</div>
